--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -981,10 +981,10 @@
                                 <rect key="frame" x="0.0" y="622" width="375" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H4o-p0-GJj">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="45"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="kk5-Xa-bb3"/>
+                                            <constraint firstAttribute="width" constant="80" id="kk5-Xa-bb3"/>
                                         </constraints>
                                         <state key="normal" title="上一题"/>
                                         <connections>
@@ -992,14 +992,28 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92m-Up-Ceo">
-                                        <rect key="frame" x="275" y="0.0" width="100" height="45"/>
+                                        <rect key="frame" x="295" y="0.0" width="80" height="45"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="qoD-bl-VM4"/>
+                                            <constraint firstAttribute="width" constant="80" id="qoD-bl-VM4"/>
                                         </constraints>
                                         <state key="normal" title="下一题"/>
                                         <connections>
                                             <action selector="nextBtnClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="ujB-hZ-Yi7"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2pt-BR-cq5">
+                                        <rect key="frame" x="147" y="10" width="80" height="25"/>
+                                        <color key="backgroundColor" red="0.82416421250000005" green="0.82416421250000005" blue="0.82416421250000005" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="LJ1-R1-hsd"/>
+                                            <constraint firstAttribute="width" constant="80" id="ZMv-JX-cWx"/>
+                                        </constraints>
+                                        <state key="normal" title="我要交卷">
+                                            <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="subButtonClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="lTT-s4-0BV"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1011,6 +1025,8 @@
                                     <constraint firstAttribute="bottom" secondItem="92m-Up-Ceo" secondAttribute="bottom" id="FB7-OJ-haY"/>
                                     <constraint firstAttribute="trailing" secondItem="92m-Up-Ceo" secondAttribute="trailing" id="X2T-zf-a3F"/>
                                     <constraint firstAttribute="height" constant="45" id="cFP-Ol-1qs"/>
+                                    <constraint firstItem="2pt-BR-cq5" firstAttribute="centerY" secondItem="Lvd-KD-hWk" secondAttribute="centerY" id="oLq-DN-BdO"/>
+                                    <constraint firstItem="2pt-BR-cq5" firstAttribute="centerX" secondItem="Lvd-KD-hWk" secondAttribute="centerX" id="pzw-hS-hj6"/>
                                     <constraint firstItem="H4o-p0-GJj" firstAttribute="leading" secondItem="Lvd-KD-hWk" secondAttribute="leading" id="sxA-Yo-CFt"/>
                                 </constraints>
                             </view>
@@ -1095,6 +1111,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="buttonRight" destination="Vjw-PU-uh5" id="VtL-1l-5ng"/>
+                        <outlet property="buttonSubPater" destination="2pt-BR-cq5" id="dmW-Qc-RcG"/>
                         <outlet property="labSurplus" destination="1dG-Op-GKW" id="6ff-tm-9MZ"/>
                         <outlet property="labTime" destination="nVR-uI-uIf" id="pA9-6g-s8F"/>
                         <outlet property="lastButton" destination="H4o-p0-GJj" id="eLF-g1-BCk"/>
