--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1167,7 +1167,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATl-Df-8sb">
-                                                    <rect key="frame" x="10" y="78" width="355" height="1"/>
+                                                    <rect key="frame" x="10" y="68" width="355" height="1"/>
                                                     <color key="backgroundColor" red="0.82416421247818494" green="0.82416421247818494" blue="0.82416421247818494" alpha="1" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="aKP-Xn-u9j"/>
@@ -1194,15 +1194,15 @@
                                                         <action selector="collectBtnClick:" destination="J6O-pa-PmV" eventType="touchUpInside" id="fVo-if-BAL"/>
                                                     </connections>
                                                 </button>
-                                                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAY-4J-Rje">
-                                                    <rect key="frame" x="15" y="50" width="345" height="20"/>
+                                                <webView tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAY-4J-Rje">
+                                                    <rect key="frame" x="15" y="50" width="345" height="10"/>
                                                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="3OF-Jy-zEy"/>
+                                                        <constraint firstAttribute="height" constant="10" id="3OF-Jy-zEy"/>
                                                     </constraints>
                                                 </webView>
-                                                <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02E-YR-9TR">
-                                                    <rect key="frame" x="20" y="94" width="335" height="20"/>
+                                                <webView tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02E-YR-9TR">
+                                                    <rect key="frame" x="20" y="84" width="335" height="20"/>
                                                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="O9x-EQ-45h"/>
@@ -1331,7 +1331,7 @@
                                                         <constraint firstAttribute="width" constant="30" id="VRL-Zf-Ifi"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(题型)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auf-H8-qpS">
