--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -1139,129 +1139,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopicqtype1" rowHeight="130" id="J6O-pa-PmV" customClass="PaterTopicTableViewCell">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="130"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J6O-pa-PmV" id="wmf-sE-trv">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="129"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nns-8U-eVd">
-                                                    <rect key="frame" x="15" y="20" width="30" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="30" id="53m-ny-YiZ"/>
-                                                        <constraint firstAttribute="height" constant="20" id="ztG-0D-95D"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(题型)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRa-bm-ZGc">
-                                                    <rect key="frame" x="45" y="20" width="133" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="133" id="bG4-Ju-YZB"/>
-                                                        <constraint firstAttribute="height" constant="20" id="eA0-Q6-jgU"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <color key="textColor" red="1" green="0.58331439266476992" blue="0.12216659541693731" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATl-Df-8sb">
-                                                    <rect key="frame" x="10" y="68" width="355" height="1"/>
-                                                    <color key="backgroundColor" red="0.82416421247818494" green="0.82416421247818494" blue="0.82416421247818494" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="1" id="aKP-Xn-u9j"/>
-                                                    </constraints>
-                                                </view>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grzx_icon2" translatesAutoresizingMaskIntoConstraints="NO" id="u8j-A5-hoI">
-                                                    <rect key="frame" x="299" y="20" width="20" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="20" id="8q8-U7-2lr"/>
-                                                        <constraint firstAttribute="height" constant="20" id="fyo-QE-fv4"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <button opaque="NO" tag="1111" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSx-xH-DUV">
-                                                    <rect key="frame" x="320" y="20" width="45" height="20"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="45" id="okl-F0-ITL"/>
-                                                        <constraint firstAttribute="height" constant="20" id="u6z-aQ-B1J"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <state key="normal" title="收藏">
-                                                        <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="collectBtnClick:" destination="J6O-pa-PmV" eventType="touchUpInside" id="fVo-if-BAL"/>
-                                                    </connections>
-                                                </button>
-                                                <webView tag="10" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NAY-4J-Rje">
-                                                    <rect key="frame" x="15" y="50" width="345" height="10"/>
-                                                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="10" id="3OF-Jy-zEy"/>
-                                                    </constraints>
-                                                </webView>
-                                                <webView tag="11" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02E-YR-9TR">
-                                                    <rect key="frame" x="20" y="84" width="335" height="20"/>
-                                                    <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="O9x-EQ-45h"/>
-                                                    </constraints>
-                                                </webView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="ATl-Df-8sb" secondAttribute="trailing" constant="10" id="1ci-sn-jYQ"/>
-                                                <constraint firstAttribute="trailing" secondItem="fSx-xH-DUV" secondAttribute="trailing" constant="10" id="7F7-8I-WuF"/>
-                                                <constraint firstItem="WRa-bm-ZGc" firstAttribute="leading" secondItem="nns-8U-eVd" secondAttribute="trailing" id="DeY-nH-PWb"/>
-                                                <constraint firstAttribute="trailing" secondItem="NAY-4J-Rje" secondAttribute="trailing" constant="15" id="EH5-Es-Pdc"/>
-                                                <constraint firstItem="nns-8U-eVd" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="15" id="GSI-kJ-ep3"/>
-                                                <constraint firstAttribute="trailing" secondItem="02E-YR-9TR" secondAttribute="trailing" constant="20" id="IMe-Cx-SxD"/>
-                                                <constraint firstItem="NAY-4J-Rje" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="15" id="N06-vu-dU3"/>
-                                                <constraint firstItem="ATl-Df-8sb" firstAttribute="top" secondItem="NAY-4J-Rje" secondAttribute="bottom" constant="8" id="Qwh-4s-0rw"/>
-                                                <constraint firstItem="nns-8U-eVd" firstAttribute="top" secondItem="wmf-sE-trv" secondAttribute="top" constant="20" id="UnT-23-Dd7"/>
-                                                <constraint firstItem="02E-YR-9TR" firstAttribute="top" secondItem="ATl-Df-8sb" secondAttribute="bottom" constant="15" id="YO2-dE-ibj"/>
-                                                <constraint firstItem="NAY-4J-Rje" firstAttribute="top" secondItem="fSx-xH-DUV" secondAttribute="bottom" constant="10" id="YxT-zR-X7N"/>
-                                                <constraint firstItem="u8j-A5-hoI" firstAttribute="top" secondItem="WRa-bm-ZGc" secondAttribute="top" id="b76-kE-65w"/>
-                                                <constraint firstItem="ATl-Df-8sb" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="10" id="mE3-IR-NH7"/>
-                                                <constraint firstItem="fSx-xH-DUV" firstAttribute="leading" secondItem="u8j-A5-hoI" secondAttribute="trailing" constant="1" id="mxO-MF-baG"/>
-                                                <constraint firstItem="02E-YR-9TR" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="20" id="oxr-G0-n8E"/>
-                                                <constraint firstItem="fSx-xH-DUV" firstAttribute="top" secondItem="WRa-bm-ZGc" secondAttribute="top" id="xtu-uc-jdD"/>
-                                                <constraint firstItem="WRa-bm-ZGc" firstAttribute="bottom" secondItem="nns-8U-eVd" secondAttribute="bottom" id="z5l-OE-Wct"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="buttonCollect" destination="fSx-xH-DUV" id="QaY-0e-sf3"/>
-                                            <outlet property="imageVIewCollect" destination="u8j-A5-hoI" id="FV3-Gj-bJ4"/>
-                                            <outlet property="labNumberWidth" destination="53m-ny-YiZ" id="0R1-ZL-Dnr"/>
-                                            <outlet property="labTopicNumber" destination="nns-8U-eVd" id="2rK-oN-Vx7"/>
-                                            <outlet property="labTopicType" destination="WRa-bm-ZGc" id="bJ6-lV-SEC"/>
-                                            <outlet property="webSelectHeight" destination="O9x-EQ-45h" id="HGJ-dO-nLi"/>
-                                            <outlet property="webTitleHeight" destination="3OF-Jy-zEy" id="pq9-3d-tcB"/>
-                                            <outlet property="webVIewSelect" destination="02E-YR-9TR" id="QdF-wV-6aU"/>
-                                            <outlet property="webViewTitle" destination="NAY-4J-Rje" id="g5g-KP-xSq"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellTest" id="UfD-nP-K3p">
-                                        <rect key="frame" x="0.0" y="180" width="375" height="120"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UfD-nP-K3p" id="lm3-sp-Wnf">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYo-Me-NDG">
-                                                    <rect key="frame" x="114" y="28" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="arrow_down" translatesAutoresizingMaskIntoConstraints="NO" id="K7m-tm-llc">
-                                                    <rect key="frame" x="277" y="68" width="20" height="10"/>
-                                                </imageView>
-                                            </subviews>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellNotes" rowHeight="120" id="JRA-tk-YHX" customClass="NotesOrErrorTableViewCell">
-                                        <rect key="frame" x="0.0" y="300" width="375" height="120"/>
+                                        <rect key="frame" x="0.0" y="50" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JRA-tk-YHX" id="e5K-J2-pVL">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
@@ -1317,8 +1196,8 @@
                                             <outlet property="textVIew" destination="zOy-Cm-hIk" id="mUG-bj-7yF"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopicqtype6" rowHeight="211" id="HTB-Up-GrC" customClass="PaterTopicQtype6TableViewCell">
-                                        <rect key="frame" x="0.0" y="420" width="375" height="211"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopicqtype6" rowHeight="211" id="HTB-Up-GrC">
+                                        <rect key="frame" x="0.0" y="170" width="375" height="211"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HTB-Up-GrC" id="fMC-d2-nkP">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="210"/>
