--- a/TyDtk/paterTopicQtype5Cell.xib
+++ b/TyDtk/paterTopicQtype5Cell.xib
@@ -19,8 +19,8 @@
                             <constraint firstAttribute="width" constant="30" id="o4c-kb-huO"/>
                             <constraint firstAttribute="height" constant="20" id="u5w-hB-RZw"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="题型" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m2k-V3-G9T">
